# vhost-discovery-tool

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.RU.md  README.md
.cargo/: config
files/: site-discovery.conf  vhost-discovery-template.xml  vhost-discovery.conf  virtual-hosts-template.xml  zbx_export_templates.xml
src/: apache.rs  apache_tests.rs  domain.rs  filter.rs  filter_tests.rs  logging.rs  main.rs  main_tests.rs  nginx.rs  nginx_tests.rs  site.rs  site_tests.rs  test_samples.rs  test_utils.rs  test_utils2.rs  vhost.rs  webserver.rs  webserver_tests.rs
src/cli/: mod.rs
src/test_utils/: config.rs  mod.rs  samples.rs
test-data/apache-vhosts/: vhost1.conf
test-data/nginx-multi-files/: vhost2.conf
test-data/nginx-multi-files/sub/: sub-vhost.conf
test-data/nginx-vhosts/: vhost3.conf
tests/apache-vhosts/: not-vhost-file  vhost2.conf
tests/nginx-vhosts/: comments.conf  listen.conf  return-301.conf  ssl-and-http2.conf  vhost2.conf  vhost3.conf
