[package]
name = "vhost-discovery-tool"
version = "1.5.3"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.58"

clap = "2.33.3"
regex = "1.5.6"

serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.81"

log = "0.4.17"
log4rs = "1.1.1"
