[package]
name = "vhost-discovery-tool"
version = "1.5.3"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.68"

clap = "2.34.0"
regex = "1.7.0"

serde = { version = "1.0.151", features = ["derive"] }
serde_derive = "1.0.151"
serde_json = "1.0.91"

log = "0.4.17"
log4rs = "1.2.0"
