[package]
name = "vhost-discovery-tool"
version = "1.5.4"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.75"

clap = "2.34.0"
regex = "1.9.6"

serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"

log = "0.4.20"
log4rs = "1.2.0"